--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.11.0",
+    "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
